# sied

./: .gitignore  Makefile  README.md  rebar.config
native/sied/: Cargo.toml  LICENSE
native/sied/src/: lib.rs
src/: crates.hrl  sied.app.src  sied.erl
test/: sied_tests.erl
