[package]
name = "sied"
version = "0.1.0"
edition = "2024"
authors = ["Steve Roques <steve.roques@gmail.com>"]
description = "High-performance SIMD operations for Erlang via Rustler"
license = "Apache-2.0"

[lib]
name = "sied"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
simdeez = "2.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
